 cnp-stig-postgresql-port-external-access-sf6fuil.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cnp-stig-postgresql-port-external-access-bsubrut
  namespace: default
spec:
  description: "This will Block PostgreSQL External Access"
  endpointSelector:
    matchLabels:
      app: jupyterhub
      component: continuous-image-puller
      controller-revision-hash: 56bc99b8f5
      pod-template-generation: 1
      release: jupyter-hub
  ingress:
    - fromEntities:
        - cluster
    - fromCIDRSet:
        - cidr: 10.10.10.1/16    #change with your ip address
      toPorts:
        - ports:
            - port: "5432"
